kustomize/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: n8n
    app.kubernetes.io/managed-by: flux
  name: n8n
  namespace: n8n
  annotations:
    description: "Service for n8n workflow automation."
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
